Add custom path for extracted APKs